tests/Tuc/Fixtures/errors/MissingIndentation.tuc
tuc parse error test
participants
GenericService parts

GenericService
